Fixed the background not covering the entire page when adding a new row of books.

--- a/style.css
+++ b/style.css
@@ -27,10 +27,8 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: #f5f5f5;
-    height: 95vh;
 }
 
 .operators {
